--- a/reelReviewBackend/build.gradle
+++ b/reelReviewBackend/build.gradle
@@ -33,8 +33,8 @@ dependencies {
     // releaseImplementation : 릴리즈 빌드 시에만 적용
     // testImplementation : 테스트 코드를 수행할 때만 적용
 
+    // spring-boot
     implementation 'org.springframework.boot:spring-boot-starter-web'
-    testImplementation 'junit:junit:4.13.1'
 
     // lombok
     compileOnly 'org.projectlombok:lombok'
@@ -47,9 +47,6 @@ dependencies {
 
     // jdbc
     runtimeOnly 'com.oracle.database.jdbc:ojdbc8'
-
-    // mybatis
-    implementation 'org.mybatis.spring.boot:mybatis-spring-boot-starter:2.2.0'
 
     // security
     implementation 'org.springframework.boot:spring-boot-starter-security'
@@ -77,6 +74,7 @@ dependencies {
     // test
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
     testImplementation 'org.springframework.security:spring-security-test'
+    testImplementation 'junit:junit:4.13.1'
 }
 
 tasks.named('test') {
