--- a/backend/build.gradle
+++ b/backend/build.gradle
@@ -5,7 +5,7 @@ plugins {
 }
 
 group = 'com.reelreview'
-version = '0.0.1-SNAPSHOT'
+version = '0.0.1'
 
 java {
     sourceCompatibility = '11'
@@ -25,6 +25,12 @@ configurations {
 
 repositories {
     mavenCentral()
+}
+
+bootJar {
+    archiveBaseName = '-'
+    archiveFileName = 'reelReview.jar'
+    archiveVersion = '0.0.0'
 }
 
 dependencies {
@@ -47,6 +53,9 @@ dependencies {
 
     // jdbc
     runtimeOnly 'com.oracle.database.jdbc:ojdbc8'
+    implementation 'com.oracle.database.security:oraclepki'
+    implementation 'com.oracle.database.security:osdt_core'
+    implementation 'com.oracle.database.security:osdt_cert'
 
     // security
     implementation 'org.springframework.boot:spring-boot-starter-security'
